slide 9 font size upd

--- a/index.html
+++ b/index.html
@@ -667,9 +667,9 @@
             <h3
               style="
                 color: #e63946;
-                font-size: 32px;
+                font-size: 28px;
                 font-weight: 600;
-                margin-bottom: 36px;
+                margin-bottom: 32px;
                 font-family: 'Montserrat', sans-serif;
                 letter-spacing: 0.5px;
               "
@@ -678,147 +678,99 @@
             </h3>
             <div
               style="
-                font-size: 24px;
-                color: rgba(255, 255, 255, 0.95);
+                font-size: 18px;
+                color: rgba(255, 255, 255, 0.92);
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-                margin-bottom: 28px;
-                line-height: 1.7;
+                font-weight: 400;
+                margin-bottom: 24px;
+                line-height: 1.8;
               "
             >
               <span style="color: #e63946; font-weight: 600">Hero-секція:</span>
-              <span style="font-weight: 300">
-                Демонструє поточну маркетингову кампанію або промо-пропозицію,
-                привертаючи увагу та задаючи тон бренду.
-              </span>
+              Демонструє поточну маркетингову кампанію або промо-пропозицію,
+              привертаючи увагу та задаючи тон бренду.
             </div>
             <div
               style="
                 font-size: 18px;
-                color: rgba(255, 255, 255, 0.95);
+                color: rgba(255, 255, 255, 0.92);
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-                margin-bottom: 28px;
-                line-height: 1.7;
-              "
-            >
-              <span style="color: #e63946; font-weight: 600">Hero-секція:</span>
-              <span style="font-weight: 400">
-                Демонструє поточну маркетингову кампанію або промо-пропозицію,
-                привертаючи увагу та задаючи тон бренду.
-              </span>
-            </div>
+                font-weight: 400;
+                margin-bottom: 24px;
+                line-height: 1.8;
               "
             >
               <span style="color: #e63946; font-weight: 600"
                 >Продуктова cекція:</span
               >
-              <span style="font-weight: 400">
-                Презентує лінійку продуктів Funju та їх унікальні особливості.
-                Нові смаки та оновлення можуть додаватися у процесі розвитку
-                бренду.
-              </span>
+              Презентує лінійку продуктів Funju та їх унікальні особливості.
+              Нові смаки та оновлення можуть додаватися у процесі розвитку
+              бренду.
             </div>
             <div
               style="
                 font-size: 18px;
-                color: rgba(255, 255, 255, 0.95);
+                color: rgba(255, 255, 255, 0.92);
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-                margin-bottom: 28px;
-                line-height: 1.7;
-              "
-            >
-              <span style="color: #e63946; font-weight: 600">Продуктова cекція:</span>
-              <span style="font-weight: 400">
-                Презентує лінійку продуктів Funju та їх унікальні особливості.
-                Нові смаки та оновлення можуть додаватися у процесі розвитку
-                бренду.
-              </span>
-            </div>
+                font-weight: 400;
+                margin-bottom: 24px;
+                line-height: 1.8;
               "
             >
               <span style="color: #e63946; font-weight: 600">Find Funju:</span>
-              <span style="font-weight: 400">
-                Інтерактивна карта, що показує точки продажу партнерів по всій
-                країні. Користувач може зареєструватися, вказавши ім’я, місто та
-                email, щоб знайти найближчу точку продажу — одночасно
-                долучаючись до бази користувачів Funju.
-              </span>
+              Інтерактивна карта, що показує точки продажу партнерів по всій
+              країні. Користувач може зареєструватися, вказавши ім’я, місто та
+              email, щоб знайти найближчу точку продажу — одночасно долучаючись
+              до бази користувачів Funju.
             </div>
             <div
               style="
                 font-size: 18px;
-                color: rgba(255, 255, 255, 0.95);
+                color: rgba(255, 255, 255, 0.92);
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-                margin-bottom: 28px;
-                line-height: 1.7;
-              "
-            >
-              <span style="color: #e63946; font-weight: 600">Find Funju:</span>
-              <span style="font-weight: 400">
-                Інтерактивна карта, що показує точки продажу партнерів по всій
-                країні. Користувач може зареєструватися, вказавши ім’я, місто та
-                email, щоб знайти найближчу точку продажу — одночасно
-                долучаючись до бази користувачів Funju.
-              </span>
-            </div>
+                font-weight: 400;
+                margin-bottom: 24px;
+                line-height: 1.8;
               "
             >
               <span style="color: #e63946; font-weight: 600"
                 >Funju Events:</span
               >
-              <span style="font-weight: 400">
-                Анонсує майбутні онлайн та офлайн події. Користувачі можуть
-                зареєструватися для участі, що допомагає збирати ліди та
-                розвивати спільноту бренду.
-              </span>
+              Анонсує майбутні онлайн та офлайн події. Користувачі можуть
+              зареєструватися для участі, що допомагає збирати ліди та розвивати
+              спільноту бренду.
             </div>
             <div
               style="
                 font-size: 18px;
-                color: rgba(255, 255, 255, 0.95);
+                color: rgba(255, 255, 255, 0.92);
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-                margin-bottom: 36px;
-                line-height: 1.7;
-              "
-            >
-              <span style="color: #e63946; font-weight: 600">Funju Events:</span>
-              <span style="font-weight: 400">
-                Анонсує майбутні онлайн та офлайн події. Користувачі можуть
-                зареєструватися для участі, що допомагає збирати ліди та
-                розвивати спільноту бренду.
-              </span>
-            </div>
+                font-weight: 400;
+                margin-bottom: 32px;
+                line-height: 1.8;
               "
             >
               <span style="color: #e63946; font-weight: 600">Funju Fans:</span>
-              <span style="font-weight: 400">
-                Галерея контенту, створеного фанами та блогерами-партнерами, з
-                TikTok-відео, Instagram Reels та відгуками, що передають
-                атмосферу та енергію Funju.
-              </span>
+              Галерея контенту, створеного фанами та блогерами-партнерами, з
+              TikTok-відео, Instagram Reels та відгуками, що передають атмосферу
+              та енергію Funju.
             </div>
             <div
               style="
                 font-size: 18px;
-                color: rgba(255, 255, 255, 0.95);
+                color: rgba(255, 255, 255, 0.92);
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-                line-height: 1.7;
+                font-weight: 400;
+                line-height: 1.8;
               "
             >
               <span style="color: #e63946; font-weight: 600">Огляд:</span>
-              <span style="font-weight: 400">
-                Вебсайт Funju створений як динамічна лендинг-сторінка,
-                оптимізована для інтернет-маркетингових кампаній. Основна мета —
-                привернути трафік, конвертувати відвідувачів у лояльних
-                користувачів та зібрати цінну базу даних для майбутніх програм
-                лояльності та утримання, надаючи користувачам як емоційну, так і
-                раціональну цінність.
-              </span>
+              Вебсайт Funju створений як динамічна лендинг-сторінка,
+              оптимізована для інтернет-маркетингових кампаній. Основна мета —
+              привернути трафік, конвертувати відвідувачів у лояльних
+              користувачів та зібрати цінну базу даних для майбутніх програм
+              лояльності та утримання, надаючи користувачам як емоційну, так і
+              раціональну цінність.
             </div>
           </div>
         </div>
