slide 9 insert text beneath title

--- a/index.html
+++ b/index.html
@@ -612,6 +612,19 @@
       <div class="slide slide-9" data-slide="9">
         <div class="slide-content">
           <h2 class="section-title">Концепція веб-сайту</h2>
+          <p
+            style="
+              font-size: 18px;
+              color: rgba(255, 255, 255, 0.7);
+              margin-bottom: 24px;
+              margin-top: 8px;
+              font-family: 'Montserrat', sans-serif;
+              line-height: 1.7;
+            "
+          >
+            Попередній перегляд вебсайту вбудовано нижче.<br />
+            Прокрутіть це вікно, щоб переглянути прототип сайту.
+          </p>
           <div class="website-mockup">
             <iframe
               src="https://funju-web.pages.dev/"
