Slide 9 text upd

--- a/index.html
+++ b/index.html
@@ -622,8 +622,8 @@
               line-height: 1.7;
             "
           >
-            Попередній перегляд вебсайту вбудовано нижче.<br />
-            Прокрутіть це вікно, щоб переглянути прототип сайту.
+            Попередній перегляд вебсайту вбудовано нижче. Прокрутіть це вікно,
+            щоб переглянути прототип сайту.
           </p>
           <div class="website-mockup">
             <iframe
@@ -730,7 +730,9 @@
                 line-height: 1.8;
               "
             >
-              <span style="color: #e63946; font-weight: 600">Find Funju:</span>
+              <span style="color: #e63946; font-weight: 600"
+                >Знайди Funju:</span
+              >
               Інтерактивна карта, що показує точки продажу партнерів по всій
               країні. Користувач може зареєструватися, вказавши ім’я, місто та
               email, щоб знайти найближчу точку продажу — одночасно долучаючись
@@ -746,9 +748,7 @@
                 line-height: 1.8;
               "
             >
-              <span style="color: #e63946; font-weight: 600"
-                >Funju Events:</span
-              >
+              <span style="color: #e63946; font-weight: 600">Funju Події:</span>
               Анонсує майбутні онлайн та офлайн події. Користувачі можуть
               зареєструватися для участі, що допомагає збирати ліди та розвивати
               спільноту бренду.
@@ -763,7 +763,7 @@
                 line-height: 1.8;
               "
             >
-              <span style="color: #e63946; font-weight: 600">Funju Fans:</span>
+              <span style="color: #e63946; font-weight: 600">Funju Фани:</span>
               Галерея контенту, створеного фанами та блогерами-партнерами, з
               TikTok-відео, Instagram Reels та відгуками, що передають атмосферу
               та енергію Funju.
