--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
             "
           >
             Попередній перегляд вебсайту вбудовано нижче. Прокрутіть це вікно,
-            щоб переглянути прототип сайту.
+            щоб переглянути прототип сайту.👇
           </p>
           <div class="website-mockup">
             <iframe
