--- a/index.html
+++ b/index.html
@@ -621,53 +621,11 @@
               font-family: 'Montserrat', sans-serif;
               line-height: 1.7;
             "
-          >
-            Попередній перегляд вебсайту вбудовано нижче. Прокрутіть це вікно,
-            щоб переглянути прототип сайту.👇
-          </p>
-          <div class="website-mockup">
-            <iframe
-              src="https://funju-web.pages.dev/"
-              title="FUNJU Website"
-              style="
-                width: 100%;
-                min-height: 600px;
-                border-radius: 20px;
-                border: none;
-                box-shadow: 0 4px 32px rgba(0, 0, 0, 0.15);
-              "
-              allowfullscreen
-            ></iframe>
-          </div>
-          <div class="site-features-grid">
-            <div>
-              <strong style="color: #e63946">Paralax</strong><br />
-              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
-                >Ефекти прокрутки</span
-              >
-            </div>
-            <div>
-              <strong style="color: #16db93">3D модель</strong><br />
-              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
-                >Обертання пляшки</span
-              >
-            </div>
-            <div>
-              <strong style="color: #ff6b9d">Анімація</strong><br />
-              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
-                >Плавні переходи</span
-              >
-            </div>
-            <div>
-              <strong style="color: #ffb347">Mobile-first</strong><br />
-              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
-                >Адаптивний дизайн</span
-              >
-            </div>
-          </div>
+          ></p>
           <div
+            class="website-mockup"
             style="
-              margin-top: 48px;
+              margin-top: 32px;
               padding: 40px;
               background: rgba(230, 57, 70, 0.05);
               border-radius: 18px;
@@ -687,7 +645,7 @@
                 letter-spacing: 0.5px;
               "
             >
-              Структура та функціональність вебсайту
+              Структура та функціональність
             </h3>
             <div
               style="
@@ -786,8 +744,62 @@
               раціональну цінність.
             </div>
           </div>
+          <br />
+          <p
+            style="
+              font-size: 22px;
+              color: rgba(255, 255, 255, 0.85);
+              margin-bottom: 24px;
+              margin-top: 8px;
+              font-family: 'Montserrat', sans-serif;
+              line-height: 1.7;
+            "
+          >
+            Попередній перегляд вебсайту вбудовано нижче. Прокрутіть це вікно,
+            щоб переглянути прототип сайту.👇
+          </p>
+          <div class="website-mockup" style="margin-top: 32px">
+            <iframe
+              src="https://funju-web.pages.dev/"
+              title="FUNJU Website"
+              style="
+                width: 100%;
+                min-height: 600px;
+                border-radius: 20px;
+                border: none;
+                box-shadow: 0 4px 32px rgba(0, 0, 0, 0.15);
+              "
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="site-features-grid" style="margin-top: 32px">
+            <div>
+              <strong style="color: #e63946">Paralax</strong><br />
+              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
+                >Ефекти прокрутки</span
+              >
+            </div>
+            <div>
+              <strong style="color: #e63946">3D модель</strong><br />
+              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
+                >Обертання пляшки</span
+              >
+            </div>
+            <div>
+              <strong style="color: #e63946">Анімація</strong><br />
+              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
+                >Плавні переходи</span
+              >
+            </div>
+            <div>
+              <strong style="color: #e63946">Mobile-first</strong><br />
+              <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
+                >Адаптивний дизайн</span
+              >
+            </div>
+          </div>
+          <div class="slide-number">10 / 11</div>
         </div>
-        <div class="slide-number">10 / 11</div>
       </div>
 
       <!-- Slide 10: Final -->
