--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             "
           >
             Попередній перегляд вебсайту вбудовано нижче. Прокрутіть це вікно,
-            щоб переглянути прототип сайту.👇
+            щоб переглянути прототип.👇
           </p>
           <div class="website-mockup" style="margin-top: 32px">
             <iframe
