--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
         <div class="slide-number">09 / 11</div>
       </div>
 
-      <!-- Slide 9: Website Mockup -->
+      <!-- Slide 9: Website -->
       <div class="slide slide-9" data-slide="9">
         <div class="slide-content">
           <h2 class="section-title">Концепція веб-сайту</h2>
@@ -760,7 +760,7 @@
           </p>
           <div class="website-mockup" style="margin-top: 32px">
             <iframe
-              src="https://funju-web.pages.dev/"
+              src="https://funju.bar/"
               title="FUNJU Website"
               style="
                 width: 100%;
